# tai-connector-google

./: CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/tai42_connector/google/: __init__.py  tai-plugin.yml
src/tai42_connector/google/core/: connector.py
src/tai_connector/google/: __init__.py  tai-plugin.yml
src/tai_connector/google/core/: __init__.py  connector.py
tests/: __init__.py  conftest.py  test_connector.py  test_import_graph.py  test_plugin_spec.py
